<resources>
    <string name="app_name">SmartEatDemo</string>
    <string name="logo_description">img error</string>

    <string name="continue_text">Продолжить</string>

    <!--enter_frame and registration_frame-->
    <string name="entrance_text">Вход</string>
    <string name="login_field">Логин</string>
    <string name="password_field">Пароль</string>
    <string name="password_forgot"><u>Забыли пароль?</u></string>
    <string name="button_enter">Войти</string>
    <string name="button_u_enter"><u>Войти</u></string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="registration_text">Регистрация</string>
    <string name="registration_u_text"><u>Регистрация</u></string>

    <string name="is_account">Есть аккаунт?</string>
    <string name="password_confirmation">Подтверждение пароля</string>
    <string name="telephone_number">Номер телефона</string>
    <string name="agreeing_terms">Я прочитал(-а) и принимаю условия предоставлния услуг</string>

    <!--email_frame-->
    <string name="email_field">Email</string>
    <string name="email_verification_title">Введите код, отправленный на вашу почту</string>
    <string name="email_code_hint">Код подтверждения</string>
    <string name="verify_email_button_text">Подтвердить</string>
    <string name="resend_code_button_text">Отправить код повторно</string>


    <!--profile_frame-->
    <string name="profile">Профиль</string>
    <string name="sex">Пол</string>
    <string name="male">М</string>
    <string name="female">Ж</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="height">Рост (см)</string>
    <string name="weight">Вес (кг)</string>
    <string name="level_of_physical_activity">Уровень активности</string>
    <string name="goal">Цель</string>
    <string name="save">Сохранить</string>
    <string name="your_login_field">Ваш логин</string>
    <string name="your_email_field">Ваш Email</string>
    <string name="date">ДД.ММ.ГГГГ</string>
    <string name="your_height">Ваш рост</string>
    <string name="your_weight">Ваш вес</string>
    <string name="choose_level_of_physical_activity">Выберите уровень активности</string>
    <string name="choose_goal">Выберите цель</string>

    <!--main_frame-->
    <string name="main">Главная</string>
    <string name="begin">Начать</string>

    <!--manual_search_results-->
    <string name="enter_name_of_dish">Введите название блюда</string>

    <!--dish-->
    <string name="dish_name">Название блюда</string>
    <string name="calories">Калории</string>
    <string name="eating">Тип пищи</string>
    <string name="eating_name">Название типа пищи</string>

    <!--dish_frame-->
    <string name="add">Добавить</string>
    <string name="calories_colon">Калории:</string>
    <string name="eating_colon">Тип пищи:</string>
    <string name="description_colon">Описание:</string>
    <string name="description">Описание</string>

    <!--profile_after_registration_frame-->
    <string name="fill_out_profile">Заполните профиль</string>

    <!--physical_activity_info_sheet-->
    <string name="levels_of_physical_activity">Уровни физической активности</string>
    <string name="physical_activity_info">- Сидячий (малоподвижный)\n\n- Небольшая активность (легкие упражнения 1-3 дня в неделю)\n\n- Умеренная активность (умеренные упражнения 3-5 дней в неделю)\n\n- Высокая активность (интенсивные упражнения 6-7 дней в неделю)\n\n- Очень высокая активность (физическая работа или тренировки дважды в день)</string>


    <!--diary-->
    <string name="date_of_addition">Дата добавления</string>
    <string name="time_of_addition">Время добавления</string>

    <!--diary_frame-->
    <string name="diary">Дневник</string>
    <string name="daily_calorie_intake">Ежедневная норма калорий:</string>

</resources>