<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/light_gray">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_of_addition"
                android:textColor="@color/dark_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingStart="5dp"/>

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_of_addition"
                android:textColor="@color/dark_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingEnd="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutDishInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayoutLeft"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textViewNameDish"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dish_name"
                    android:textColor="@color/dark_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingStart="5dp"/>

                <TextView
                    android:id="@+id/textViewCalories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/calories"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingStart="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutRight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textViewEating"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/eating"
                    android:textColor="@color/dark_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingEnd="5dp"/>

                <TextView
                    android:id="@+id/textViewEatingName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/eating_name"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingEnd="5dp"/>

            </LinearLayout>
        </LinearLayout>

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>