<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DishActivity">

    <!-- Верхняя панель -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:background="@color/main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.05"/>

        <TextView
            android:id="@+id/textViewMainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:layout_constraintHorizontal_bias="0.5">

    <TextView
        android:id="@+id/textViewDishName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dish_name"
        android:textColor="@color/dark_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="10dp"/>

        <LinearLayout
            android:id="@+id/linearLayoutCalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCaloriesColon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calories_colon"
                android:textColor="@color/dark_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_marginStart="65dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/textViewCaloriesCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_marginEnd="65dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutEating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewEatingColon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eating_colon"
                android:textColor="@color/dark_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_marginStart="65dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/textViewEatingName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eating_name"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_marginEnd="65dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_colon"
                android:textColor="@color/dark_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="start"
                android:layout_marginStart="65dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/textViewDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_marginEnd="65dp"
                android:layout_weight="1"/>

        </LinearLayout>



    </LinearLayout>


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:onClick="clickOnMainButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintWidth_percent="0.82"/>


    <!-- Нижняя панель навигации -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="1">

        <ImageButton
            android:id="@+id/imageButtonDiary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/diary_icon"
            android:background="@color/main"
            android:contentDescription="@string/logo_description"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonHome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageButton
            android:id="@+id/imageButtonHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/home_icon"
            android:background="@color/main_dark"
            android:contentDescription="@string/logo_description"
            app:layout_constraintStart_toEndOf="@+id/imageButtonDiary"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonProfile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButtonProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/profile_icon"
            android:background="@color/main"
            android:contentDescription="@string/logo_description"
            app:layout_constraintStart_toEndOf="@+id/imageButtonHome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>