<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="151dp"
        android:layout_height="136dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087"
        app:srcCompat="@drawable/logo2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="364dp"
        android:layout_height="550dp"
        android:background="@drawable/rounded_constraint_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86">
        <!--  app:shapeAppearanceOverlay="@theme/ShapeAppearance.App.CornerSize">-->
        <!--        android:background="@drawable/rounded_login_ui"-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="188dp"
            app:hintEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="295dp"
                android:layout_height="48dp"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/telephone_number"
                android:inputType="text"
                android:textColor="#383738" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="300dp"
            android:layout_height="55dp"
            app:hintEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.037">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="295dp"
                android:layout_height="48dp"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/login_field"
                android:inputType="text"
                android:textColor="#383738" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="300dp"
            android:layout_height="55dp"

            android:layout_marginTop="22dp"
            android:layout_marginBottom="236dp"
            app:hintEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintVertical_bias="0.0"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="295dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/password_confirmation"

                android:inputType="textPassword"
                android:textColor="#373737"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.17"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.543" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        <Button-->
        <!--            android:id="@+id/button2"-->
        <!--            android:layout_width="180dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:backgroundTint="#EEF5E6"-->
        <!--            android:text="@string/entrance_text"-->
        <!--            android:textColor="#313131"-->
        <!--            android:textSize="20sp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/textView2"-->
        <!--            app:layout_constraintVertical_bias="0.058" />-->

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_text"
            android:textColor="#313131"
            android:textColorLink="#DD5235"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="300dp"
            android:layout_height="55dp"

            android:layout_marginBottom="4dp"
            app:hintEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.056"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="295dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/password_field"

                android:inputType="textPassword"
                android:textColor="#373737"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.17"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.543" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#EEF5E6"
            android:text="@string/continue_text"
            android:textColor="#313131"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.872" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_account"
            android:textColor="#393738"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.348"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-12dp"
            android:text="@string/agreeing_terms"
            android:textColor="#323232"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.593"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintVertical_bias="0.103" />

        <TextView
            android:id="@+id/from_registration_to_entrance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:onClick="toEntrance"
            android:text="@string/button_u_enter"
            android:textColor="#313131"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.648"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.949"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

